tests/errors/array_size_03.f90
program arrays_02
    implicit none
    integer :: a(3)
    integer :: size_a
    size_a = size(a, kind1=4)
end
